--- a/manifest.json
+++ b/manifest.json
@@ -24,5 +24,12 @@
     "background":{
         "service_worker": "backgroundPopapSize.js",
         "type": "module"
-    }
+    },
+    "web_accessible_resources": [
+        {
+            "resources": [ "./data/envUrls.json" ],
+            "matches": ["<all_urls>"],
+            "extension_ids": []
+        }
+    ]
 }
