--- a/manifest.json
+++ b/manifest.json
@@ -27,7 +27,7 @@
     },
     "web_accessible_resources": [
         {
-            "resources": [ "./data/envUrls.json" ],
+            "resources": [ "data/envUrls.json" ],
             "matches": ["<all_urls>"],
             "extension_ids": []
         }
